--- a/package.json
+++ b/package.json
@@ -8,11 +8,17 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^12.0.0",
+    "@react-native-community/datetimepicker": "3.5.2",
+    "axios": "^0.21.1",
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
+    "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-date-picker": "^3.3.2",
+    "react-native-modal-datetime-picker": "^10.2.0",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
